--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- Open Graph Meta (Facebook, WhatsApp, LinkedIn, dll) -->
   <meta property="og:title" content="Keindahan dan Budaya Nusa Tenggara Timur | Wonderful NTT">
   <meta property="og:description" content="Menjelajahi alam dan budaya Nusa Tenggara Timur — dari pesisir biru Labuan Bajo hingga pegunungan di Flores dan tradisi kuno Sumba.">
-  <meta property="og:image" content="https://yourdomain.com/assets/img/ntt-preview.jpg">
-  <meta property="og:url" content="https://yourdomain.com/">
+  <meta property="og:image" content="https://wisatantt.web.id/assets/img/manggarai/pulau-kelorr.webp">
+  <meta property="og:url" content="https://wisatantt.web.id">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Wonderful NTT">
 
@@ -37,13 +37,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Tour
-  * Template URL: https://bootstrapmade.com/tour-bootstrap-travel-website-template/
-  * Updated: Jul 01 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="index-page">
@@ -52,7 +46,8 @@
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
+        <!-- <img src="assets/img/logo.webp" alt="Wisata NTT"> -->
+        <img src="assets/img/logo.webp" alt="Wisata NTT">
         <h1 class="sitename">Wonderfull NTT</h1>
       </a>
 
