--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
           <li><a href="destinations.html">Destinasi</a></li>
           <li><a href="blog.html">Cerita Wisata</a></li>
         </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+
+      <a class="btn-getstarted" href="destiantios.html">Destinasi</a>
 
     </div>
   </header>
