--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="destiantios.html">Destinasi</a>
+      <a class="btn-getstarted" href="destinations.html">Destinasi</a>
 
     </div>
   </header>
