--- a/destinations.html
+++ b/destinations.html
@@ -27,13 +27,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Tour
-  * Template URL: https://bootstrapmade.com/tour-bootstrap-travel-website-template/
-  * Updated: Jul 01 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="destinations-page">
@@ -42,18 +36,20 @@
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Wonderfull NTT</h1>
+        <!-- <img src="assets/img/logo.webp" alt="Wisata NTT"> -->
+        <img src="assets/img/logo.webp" alt="Wisata NTT">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li><a href="index.html" class="active">Beranda</a></li>
           <li><a href="about.html">Tentang Kami</a></li>
-          <li><a href="destinations.html" class="active">Destinasi</a></li>
+          <li><a href="destinations.html">Destinasi</a></li>
           <li><a href="blog.html">Cerita Wisata</a></li>
         </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+      <a class="btn-getstarted" href="destinations.html">Destinasi</a>
 
     </div>
   </header>
