--- a/blog-details-pulau-komodo.html
+++ b/blog-details-pulau-komodo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Blog Details - Tour Bootstrap Template</title>
+  <title>Pulau Komodo | Wisata Wonderful NTT</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -27,13 +27,6 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Tour
-  * Template URL: https://bootstrapmade.com/tour-bootstrap-travel-website-template/
-  * Updated: Jul 01 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="blog-details-page">
@@ -42,18 +35,20 @@
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Wonderfull NTT</h1>
+        <!-- <img src="assets/img/logo.webp" alt="Wisata NTT"> -->
+        <img src="assets/img/logo.webp" alt="Wisata NTT">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li><a href="index.html" class="active">Beranda</a></li>
           <li><a href="about.html">Tentang Kami</a></li>
-          <li><a href="destinations.html" >Destinasi</a></li>
-          <li><a href="blog.html" class="active">Cerita Wisata</a></li>
+          <li><a href="destinations.html">Destinasi</a></li>
+          <li><a href="blog.html">Cerita Wisata</a></li>
         </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+      <a class="btn-getstarted" href="destinations.html">Destinasi</a>
 
     </div>
   </header>
