--- a/blog-details-waerebo.html
+++ b/blog-details-waerebo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Blog Details - Tour Bootstrap Template</title>
+  <title>Desa Wisata Waerebo | Wonderful NTT</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -35,14 +35,14 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="/" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- <img src="assets/img/logo.webp" alt="Wisata NTT"> -->
         <img src="assets/img/logo.webp" alt="Wisata NTT">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Beranda</a></li>
+          <li><a href="/" class="active">Beranda</a></li>
           <li><a href="about.html">Tentang Kami</a></li>
           <li><a href="destinations.html">Destinasi</a></li>
           <li><a href="blog.html">Cerita Wisata</a></li>
