--- a/blog-details-waerebo.html
+++ b/blog-details-waerebo.html
@@ -62,7 +62,7 @@
         <h1>Blog</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Beranda</a></li>
+            <li><a href="/">Beranda</a></li>
             <li><a href="blog.html">Cerita Wisata</a></li>
             <li class="current">Detail Blog</li>
           </ol>
@@ -340,7 +340,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Jelajahi</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Beranda</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/">Beranda</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="about.html">Tentang Kami</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="destinations.html">Destinasi</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="blog.html">Cerita Wisata</a></li>
