--- a/blog.html
+++ b/blog.html
@@ -185,7 +185,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Jelajahi</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Beranda</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/">Beranda</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="about.html">Tentang Kami</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="destinations.html">Destinasi</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="blog.html">Cerita Wisata</a></li>
